--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@ if Bartek Consulting is involved in a merger, acquisition, or sale of all or a p
  
 
 What are my opt-out rights?
-You can stop all collection of information by the Application easily by uninstalling the Application. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network. You can also request to opt-out via email, at privacy@applicationsite.com.
+You can stop all collection of information by the Application easily by uninstalling the Application. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network. You can also request to opt-out via email, at brotherbaner@gmail.com
 
  
 
 Data Retention Policy, Managing Your Information
-We will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. We will retain Automatically Collected information for up to 24 months and thereafter may store it in aggregate. If you’d like us to delete User Provided Data that you have provided via the Application, please contact us at privacy@applicationsite.com and we will respond in a reasonable time. Please note that some or all of the User Provided Data may be required in order for the Application to function properly.
+We will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. We will retain Automatically Collected information for up to 24 months and thereafter may store it in aggregate. If you’d like us to delete User Provided Data that you have provided via the Application, please contact us at brotherbaner@gmail.com and we will respond in a reasonable time. Please note that some or all of the User Provided Data may be required in order for the Application to function properly.
 
  
 
@@ -73,4 +73,4 @@ By using the Application, you are consenting to our processing of your informati
  
 
 Contact us
-If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at privacy@applicationsite.com.
+If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at brotherbaner@gmail.com
